--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "dev": "nodemon index.js"
     },
     "dependencies": {
+        "@playwright/test": "^1.45.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
